--- a/ios/Easyclub.xcodeproj/xcshareddata/xcschemes/Easyclub.xcscheme
+++ b/ios/Easyclub.xcodeproj/xcshareddata/xcschemes/Easyclub.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1130"
+   LastUpgradeVersion = "1210"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "Tododeusa.app"
-               BlueprintName = "Tododeusa"
-               ReferencedContainer = "container:Tododeusa.xcodeproj">
+               BuildableName = "Easyclub.app"
+               BlueprintName = "Easyclub"
+               ReferencedContainer = "container:Easyclub.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "TododeusaTests.xctest"
-               BlueprintName = "TododeusaTests"
-               ReferencedContainer = "container:Tododeusa.xcodeproj">
+               BuildableName = "EasyclubTests.xctest"
+               BlueprintName = "EasyclubTests"
+               ReferencedContainer = "container:Easyclub.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "Tododeusa.app"
-            BlueprintName = "Tododeusa"
-            ReferencedContainer = "container:Tododeusa.xcodeproj">
+            BuildableName = "Easyclub.app"
+            BlueprintName = "Easyclub"
+            ReferencedContainer = "container:Easyclub.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "Tododeusa.app"
-            BlueprintName = "Tododeusa"
-            ReferencedContainer = "container:Tododeusa.xcodeproj">
+            BuildableName = "Easyclub.app"
+            BlueprintName = "Easyclub"
+            ReferencedContainer = "container:Easyclub.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
