--- a/ios/Easyclub/Easyclub.entitlements
+++ b/ios/Easyclub/Easyclub.entitlements
@@ -6,15 +6,11 @@
 	<string>development</string>
 	<key>com.apple.developer.icloud-container-identifiers</key>
 	<array>
-		<string>iCloud.org.reactjs.native.example.Tododeusa-brian</string>
+		<string>iCloud.org.reactjs.native.example.Easyclub-ort</string>
 	</array>
 	<key>com.apple.developer.icloud-services</key>
 	<array>
-		<string>CloudDocuments</string>
-	</array>
-	<key>com.apple.developer.ubiquity-container-identifiers</key>
-	<array>
-		<string>iCloud.org.reactjs.native.example.Tododeusa-brian</string>
+		<string>CloudKit</string>
 	</array>
 	<key>com.apple.developer.ubiquity-kvstore-identifier</key>
 	<string>$(TeamIdentifierPrefix)$(CFBundleIdentifier)</string>
