--- a/android/build.gradle
+++ b/android/build.gradle
@@ -7,6 +7,8 @@ buildscript {
         compileSdkVersion = 30
         targetSdkVersion = 30
         supportLibVersion = "29.0.2"
+        playServicesVersion = "17.0.0" // or find latest version
+        androidMapsUtilsVersion = "0.5+"
     }
     repositories {
         google()
