--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-chart-kit": "^6.11.0",
     "react-native-check-box": "^2.1.7",
     "react-native-document-picker": "^2.3.0",
+    "react-native-dotenv": "^3.3.1",
     "react-native-dropdown-picker": "^5.0.0",
     "react-native-dropdownalert": "^4.1.0",
     "react-native-easy-toast": "^1.1.0",
@@ -43,8 +44,12 @@
     "react-native-hr-component": "^2.0.2",
     "react-native-indicator": "^1.0.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.3",
+    "react-native-location": "^2.5.0",
     "react-native-mail": "^3.0.7",
+    "react-native-maps": "^0.24.2",
+    "react-native-maps-directions": "^1.8.0",
     "react-native-material-dropdown": "^0.11.1",
+    "react-native-modal-datetime-picker": "^7.6.1",
     "react-native-modal-dropdown": "^0.6.2",
     "react-native-modal-dropdown-v2": "^1.0.1",
     "react-native-orientation-loading-overlay": "^0.1.6",
