--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 GOOGLE_MAPS_KEY=AIzaSyA1PAMaduvc4CHUz8IwM8ZkJ9Z2ynuOL64 
+
+MP_ACCESS_TOKEN=TEST-4444868198312058-092700-8836b0e132535cddd57811bd62199818__LD_LA__-148407430
+
+MP_PUBLIC_KEY=TEST-edd07fe8-f948-4274-8900-c08bc5fc01a5
