--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-dropdown-picker": "^5.0.0",
     "react-native-dropdownalert": "^4.1.0",
     "react-native-easy-toast": "^1.1.0",
+    "react-native-fetch-blob": "^0.10.8",
     "react-native-flash-message": "^0.1.23",
     "react-native-gesture-handler": "^1.0.12",
     "react-native-hr-component": "^2.0.2",
