--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -226,6 +226,7 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+    implementation 'com.facebook.android:facebook-android-sdk:latest.release'
 }
 
 // Run this once to be able to run the application with BUCK
