--- a/android/build.gradle
+++ b/android/build.gradle
@@ -13,6 +13,8 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven { url 'https://www.jitpack.io' }
+        mavenCentral()
     }
     dependencies {
         classpath("com.android.tools.build:gradle:3.5.3")
@@ -36,5 +38,6 @@ allprojects {
         google()
         jcenter()
         maven { url 'https://www.jitpack.io' }
+        mavenCentral()
     }
 }
