--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -28,6 +28,6 @@ MYAPP_RELEASE_KEY_PASSWORD=briansaban
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
-
+org.gradle.jvmargs=-Xmx4g
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.54.0
